# libs

./: .cmake-format.json  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.circleci/: config.yml
.github/: LINT_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml
cmake/modules/: curl.cmake  libaudit.cmake  libbpf.cmake  libelf.cmake  libscap.cmake  zlib.cmake
driver/: capture_macro.h  event_stats.h  event_table.c  feature_gates.h  fillers_table.c  flags_table.c  kernel_hacks.h  main.c  ppm.h  ppm_api_version.h  ppm_compat_unistd_32.h  ppm_cputime.c  ppm_events.c  ppm_events.h  ppm_events_public.h  ppm_fillers.c  ppm_fillers.h  ppm_flag_helpers.h  ppm_ringbuffer.h  ppm_syscall.h  ppm_version.h  syscall_table.c  systype_compat.h
driver/bpf/: Makefile  bpf_helpers.h  filler_helpers.h  fillers.h  maps.h  missing_definitions.h  plumbing_helpers.h  probe.c  quirks.h  ring_helpers.h  types.h
driver/modern_bpf/definitions/: events_dimensions.h  missing_definitions.h
driver/modern_bpf/license/: license.bpf.c
driver/modern_bpf/maps/: maps.h
driver/modern_bpf/shared_definitions/: struct_definitions.h
examples/: CMakeLists.txt
examples/scap/: CMakeLists.txt  README.md  scap-example.cpp
pkgconfig/: libbpf.pc
proposals/: 20240901-drop-support-for-syscall-enter-events.md
stats/: first.txt  first_event.sh  main  main.c  new_main.c  ordered.sh  ordered.txt  out_of_order.sh  out_of_order.txt  sequential.txt  sequential_event.sh  standard.sh  standard.txt  stressor.c  wrapper.c
stats/16CPU/scap/: first.sh  loop.sh  sequential.sh
stats/16CPU/sinsp/: loop.sh  sequential.sh
stats/calibrate/: README.md  calibrate.c
stats/scap/: first.sh  loop.sh  sequential.sh
stats/sinsp/: loop.sh  sequential.sh
test/drivers/event_class/: event_class.cpp  event_class.h  network_utils.h
test/drivers/helpers/: proc_parsing.h
test/libsinsp_e2e/: CMakeLists.txt  forking.cpp  paths.cpp
test/modern_bpf/: CMakeLists.txt  start_tests.cpp
test/modern_bpf/containers/: Dockerfile  centos7-builder.Dockerfile  runner.Dockerfile  ubuntu1804-builder.Dockerfile
test/modern_bpf/event_class/: event_class.cpp  event_class.h
test/modern_bpf/helpers/: proc_parsing.cpp  proc_parsing.h
userspace/chisel/: chisel.cpp  chisel.h  chisel_api.cpp  chisel_api.h  chisel_fields_info.cpp  chisel_table.cpp  chisel_utils.cpp  chisel_utils.h
userspace/common/: strlcpy.h  types.h
userspace/libpman/: CMakeLists.txt
userspace/libpman/include/: libpman.h
userspace/libpman/src/: capture.c  configuration.c  events_prog_names.c  events_prog_names.h  maps.c  programs.c  ringbuffer.c  ringbuffer_definitions.h  state.c  state.h  stats.c
userspace/libscap/: CMakeLists.txt  engine_handle.h  plugin_info.h  scap-int.h  scap.c  scap.h  scap_bpf.c  scap_bpf.h  scap_engine_util.c  scap_engine_util.h  scap_engines.h  scap_event.c  scap_fds.c  scap_iflist.c  scap_open.h  scap_print_event.c  scap_procs.c  scap_procs.h  scap_savefile.c  scap_savefile.h  scap_savefile_api.h  scap_userlist.c  scap_vtable.h  stdint_win.h  syscall_info_table.c  unixid.h  userspace_flag_helpers.h  uthash.h  windows_hal.c  windows_hal.h
userspace/libscap/compat/: bpf.h  misc.h  perf_event.h
userspace/libscap/engine/bpf/: CMakeLists.txt  bpf.h  bpf_public.c  bpf_public.h  scap_bpf.c  scap_bpf.h
userspace/libscap/linux/: gettimeofday.h  scap_fds.c  scap_ppm_sc.c  scap_procs.c
userspace/libscap/macos/: scap_ppm_sc.c  sleep.h
userspace/libscap/ringbuffer/: devset.c  devset.h  ringbuffer.h  ringbuffer_dump.c
userspace/libscap/test/: CMakeLists.txt  README.md  scap_event.ut.cpp  scap_gvisor_parsers.ut.cpp
userspace/libscap/test/test_suites/engines/bpf/: bpf.cpp
userspace/libscap/test/test_suites/engines/kmod/: kmod.cpp
userspace/libscap/test/test_suites/engines/modern_bpf/: modern_bpf.cpp
userspace/libscap/test/utils/: engine_utils.cpp
userspace/libscap/win32/: gettimeofday.h  scap_ppm_sc.c  sleep.h
userspace/libscap/win_hal/: win_hal_public.h
userspace/libsinsp/: CMakeLists.txt  addrinfo.cpp  capture_stats_source.h  cgroup_limits.cpp  cgroup_limits.h  cgroup_list_counter.h  container.cpp  container.h  container_info.cpp  container_info.h  cri.cpp  cri.h  cyclewriter.cpp  cyclewriter.h  dns_manager.cpp  dns_manager.h  dumper.cpp  dumper.h  event.cpp  event.h  eventformatter.cpp  eventformatter.h  fdinfo.cpp  fdinfo.h  fields_info.cpp  fields_info.h  filter.cpp  filter.h  filter_check_list.cpp  filter_check_list.h  filter_value.h  filterchecks.cpp  filterchecks.h  gen_filter.cpp  gen_filter.h  grpc_channel_registry.cpp  grpc_channel_registry.h  gvisor_config.cpp  gvisor_config.h  http_parser.c  (+150 more)
userspace/libsinsp/async/: async_key_value_source.h  async_key_value_source.tpp
userspace/libsinsp/container_engine/: bpm.cpp  bpm.h  container_async_source.tpp  container_cache_interface.h  container_engine_base.cpp  container_engine_base.h  cri.cpp  cri.h  libvirt_lxc.cpp  libvirt_lxc.h  lxc.cpp  lxc.h  mesos.cpp  mesos.h  rkt.cpp  rkt.h  sinsp_container_type.h  static_container.cpp  static_container.h  wmi_handle_source.h
userspace/libsinsp/events/: sinsp_events.h  sinsp_events_ppm_sc.cpp  sinsp_events_tp.cpp
userspace/libsinsp/examples/: test.cpp  util.cpp
userspace/libsinsp/extract_modifier/: extract_modifier.cpp  extract_modifier.h
userspace/libsinsp/filter/: ast.cpp  ast.h  parser.cpp  parser.h
userspace/libsinsp/include/: sinsp_external_processor.h
userspace/libsinsp/sinsp_debug/: README.md  sinsp_debug.cpp
userspace/plugin/: plugin_types.h
(+172 files in other folders)
